@@ -67,11 +67,12 @@ TESTING_PACKAGES = [
     'gcc',
     'gcj',
     'ghostscript',
-    'libgcj7-dev',
+#    'libgcj7-dev',
     'm4',
     'openssh-client',
     'openssh-server',
     'python-profiler',
+    'python-all-dev',
     'rcs',
     'rpm',
     'sun-java5-jdk',
